--- a/L1_basic/CMakeLists.txt
+++ b/L1_basic/CMakeLists.txt
@@ -4,6 +4,7 @@ file(GLOB_RECURSE CPP_SOURCES ${CPP_SOURCES_DIR} *.*)
 list(FILTER CPP_SOURCES INCLUDE REGEX ${CPP_SOURCES_DIR}/*)
 set(L1_BASIC_NODE_SOURCES ${CPP_SOURCES})
 
+IF (WIN32)
 foreach(_source IN ITEMS ${L1_BASIC_NODE_SOURCES})
   if(IS_ABSOLUTE "${_source}")
     file(RELATIVE_PATH _source_rel "${CMAKE_CURRENT_SOURCE_DIR}" "${_source}")
@@ -15,6 +16,7 @@ foreach(_source IN ITEMS ${L1_BASIC_NODE_SOURCES})
   string(REPLACE "/" "\\" _source_path_msvc "${_source_path}")
   source_group("${_source_path_msvc}" FILES "${_source}")
 endforeach()
+ENDIF()
 
 add_executable(L1_basic_node WIN32 ${L1_BASIC_NODE_SOURCES} ${NODE_SYSTEM_SOURCES})
 target_include_directories(L1_basic_node PRIVATE ${L1_BASIC_NODE_SOURCES_DIR})
