--- a/L2_core/CMakeLists.txt
+++ b/L2_core/CMakeLists.txt
@@ -4,6 +4,7 @@ file(GLOB_RECURSE CPP_SOURCES ${CPP_SOURCES_DIR} *.*)
 list(FILTER CPP_SOURCES INCLUDE REGEX ${CPP_SOURCES_DIR}/*)
 set(L2_CORE_NODE_SOURCES ${CPP_SOURCES})
 
+IF (WIN32)
 foreach(_source IN ITEMS ${L2_CORE_NODE_SOURCES})
   if(IS_ABSOLUTE "${_source}")
     file(RELATIVE_PATH _source_rel "${CMAKE_CURRENT_SOURCE_DIR}" "${_source}")
@@ -16,6 +17,7 @@ foreach(_source IN ITEMS ${L2_CORE_NODE_SOURCES})
   source_group("${_source_path_msvc}" FILES "${_source}")
 endforeach()
 
+ENDIF()
 add_executable(L2_core_node WIN32 ${L2_CORE_NODE_SOURCES} ${NODE_SYSTEM_SOURCES})
 target_include_directories(L2_core_node PRIVATE ${L2_CORE_NODE_SOURCES_DIR})
 target_include_directories(L2_core_node PRIVATE ${NODE_SYSTEM_SOURCES_DIR})
