--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "third_party/spdlog"]
 	path = third_party/spdlog
 	url = https://github.com/gabime/spdlog
+[submodule "third_party/boost-cmake"]
+	path = third_party/boost-cmake
+	url = https://github.com/Orphis/boost-cmake.git
