--- a/L2_core/CMakeLists.txt
+++ b/L2_core/CMakeLists.txt
@@ -18,14 +18,14 @@ foreach(_source IN ITEMS ${L2_CORE_NODE_SOURCES})
 endforeach()
 
 ENDIF()
-add_executable(L2_core_node WIN32 ${L2_CORE_NODE_SOURCES} ${NODE_SYSTEM_SOURCES})
+add_executable(L2_core_node ${L2_CORE_NODE_SOURCES} ${NODE_SYSTEM_SOURCES})
 target_include_directories(L2_core_node PRIVATE ${L2_CORE_NODE_SOURCES_DIR})
 target_include_directories(L2_core_node PRIVATE ${NODE_SYSTEM_SOURCES_DIR})
 set(CMAKE_CXX_FLAGS_DEBUG_INIT "${CMAKE_CXX_FLAGS_DEBUG_INIT}" "Zl")
 set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} /INCREMENTAL /EDITANDCONTINUE")
 
 # target_link_libraries(L2_core_node node_system)
-target_add_libraries(L2_core_node "openssl" "spdlog")
+target_add_libraries(L2_core_node "openssl" "spdlog" "boost")
 #target_precompile_headers(L2_core_node PRIVATE "${NODE_SYSTEM_SOURCES_DIR}/include/library-pch.hpp")
 
 set_target_properties(L2_core_node PROPERTIES LINKER_LANGUAGE CXX)
