--- a/keygen/CMakeLists.txt
+++ b/keygen/CMakeLists.txt
@@ -1,12 +1,12 @@
-set(CPP_SOURCES_DIR "${CMAKE_CURRENT_SOURCE_DIR}/L1_basic")
+set(CPP_SOURCES_DIR "${CMAKE_CURRENT_SOURCE_DIR}/keygen")
 
 file(GLOB_RECURSE CPP_SOURCES ${CPP_SOURCES_DIR} *.*)
 list(FILTER CPP_SOURCES INCLUDE REGEX ${CPP_SOURCES_DIR}/*)
-set(L1_BASIC_NODE_SOURCES ${CPP_SOURCES})
-set(PROJECT_NAME L1_basic_node)
+set(KEYGEN_SOURCES ${CPP_SOURCES})
+set(PROJECT_NAME Keygen)
 
 IF (WIN32)
-foreach(_source IN ITEMS ${L1_BASIC_NODE_SOURCES})
+foreach(_source IN ITEMS ${KEYGEN_SOURCES})
   if(IS_ABSOLUTE "${_source}")
     file(RELATIVE_PATH _source_rel "${CMAKE_CURRENT_SOURCE_DIR}" "${_source}")
   else()
@@ -19,8 +19,8 @@ foreach(_source IN ITEMS ${L1_BASIC_NODE_SOURCES})
 endforeach()
 ENDIF()
 
-add_executable(${PROJECT_NAME} ${L1_BASIC_NODE_SOURCES} ${NODE_SYSTEM_SOURCES})
-target_include_directories(${PROJECT_NAME} PRIVATE ${L1_BASIC_NODE_SOURCES_DIR})
+add_executable(${PROJECT_NAME} ${KEYGEN_SOURCES} ${NODE_SYSTEM_SOURCES})
+target_include_directories(${PROJECT_NAME} PRIVATE ${KEYGEN_SOURCES_DIR})
 target_include_directories(${PROJECT_NAME} PRIVATE ${NODE_SYSTEM_SOURCES_DIR})
 set(CMAKE_CXX_FLAGS_DEBUG_INIT "${CMAKE_CXX_FLAGS_DEBUG_INIT}" "Zl")
 set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} /INCREMENTAL /EDITANDCONTINUE")
