--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,10 @@
     "files.associations": {
         "chrono": "cpp",
         "filesystem": "cpp",
-        "type_traits": "cpp"
+        "type_traits": "cpp",
+        "charconv": "cpp",
+        "xstring": "cpp",
+        "xhash": "cpp",
+        "xtree": "cpp"
     }
 }
