--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,3 +22,4 @@ include("${CMAKE_CURRENT_SOURCE_DIR}/third_party/CMakeLists.txt")
 include("${CMAKE_CURRENT_SOURCE_DIR}/node_system/CMakeLists.txt")
 include("${CMAKE_CURRENT_SOURCE_DIR}/L1_basic/CMakeLists.txt")
 include("${CMAKE_CURRENT_SOURCE_DIR}/L2_core/CMakeLists.txt")
+include("${CMAKE_CURRENT_SOURCE_DIR}/keygen/CMakeLists.txt")
