--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,4 +23,5 @@ include("${CMAKE_CURRENT_SOURCE_DIR}/node_system/CMakeLists.txt")
 include("${CMAKE_CURRENT_SOURCE_DIR}/L1_basic/CMakeLists.txt")
 include("${CMAKE_CURRENT_SOURCE_DIR}/L2_core/CMakeLists.txt")
 include("${CMAKE_CURRENT_SOURCE_DIR}/keygen/CMakeLists.txt")
-include("${CMAKE_CURRENT_SOURCE_DIR}/Cryptor/CMakeLists.txt")
+include("${CMAKE_CURRENT_SOURCE_DIR}/cryptor/CMakeLists.txt")
+include("${CMAKE_CURRENT_SOURCE_DIR}/tests/CMakeLists.txt")
