--- a/L1_basic/CMakeLists.txt
+++ b/L1_basic/CMakeLists.txt
@@ -1,5 +1,6 @@
 set(CPP_SOURCES_DIR "${CMAKE_CURRENT_SOURCE_DIR}/L1_basic")
 
+set(CMAKE_CXX_STANDARD 20)
 file(GLOB_RECURSE CPP_SOURCES ${CPP_SOURCES_DIR} *.*)
 list(FILTER CPP_SOURCES INCLUDE REGEX ${CPP_SOURCES_DIR}/*)
 set(L1_BASIC_NODE_SOURCES ${CPP_SOURCES})
